New index and next

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 <body>
 	<div>
 		<ul>
+			<h3>Major things needed</h3>
 			<li>bricks</li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
+			<li>motar</li>
+			<li>sand</li>
+			<li>spade</li>
 		</ul>
+		<a href="next.html">Others</a>
 	</div>
 </body>
 </html>
