--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 <body>
 	<div>
 		<ul>
+			<h3>Items needed</h3>
 			<li>bricks</li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
+			<li>mungo sand</li>
+			<li>level</li>
+			<li>pay</li>
+			<li>organis</li>
 		</ul>
 	</div>
 </body>
