Form and javascript basics

--- a/index.html
+++ b/index.html
@@ -2,26 +2,23 @@
 <html>
 <head>
 	<title></title>
+	<script type="text/javascript" src="javascript/script.js">
+		
+	</script>
 </head>
 <body>
 	<div>
-		<ul>
-<<<<<<< HEAD
-			<h3>Items needed</h3>
-			<li>bricks</li>
-			<li>mungo sand</li>
-			<li>level</li>
-			<li>pay</li>
-			<li>organis</li>
-=======
-			<h3>Major things needed</h3>
-			<li>bricks</li>
-			<li>motar</li>
-			<li>sand</li>
-			<li>spade</li>
->>>>>>> 7d2c44bdea1931e1607b0c5f976dbf60d9d6731f
-		</ul>
-		<a href="next.html">Others</a>
+		
+		<hr>
+		<form>
+			Length:  <br><input type="number" id="length">
+			<br>
+			Width: <br> <input type="number" id="width">
+			<br><br>
+			<input type="button" value="Get Area" onclick="area()">
+			<input type="text" name="" id="answer">
+		</form>
 	</div>
+	
 </body>
 </html>
