started off with dice guess gsme

--- a/index.html
+++ b/index.html
@@ -1,24 +1,49 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-	<script type="text/javascript" src="javascript/script.js">
-		
-	</script>
+	<meta charset="utf-8">
+	<title>Javascript try</title>
+	
 </head>
 <body>
-	<div>
-		
+	<!-- <div>
+		n
 		<hr>
 		<form>
 			Length:  <br><input type="number" id="length">
 			<br>
 			Width: <br> <input type="number" id="width">
 			<br><br>
-			<input type="button" value="Get Area" onclick="area()">
+			<input type="button" value="Get Area" onclick="area()" >
 			<input type="text" name="" id="answer">
 		</form>
+	</div> -->
+	<script type="text/javascript">
+		var name = prompt("Please Enter your name to continue", "");
+		var v = getElementsByClassName("wellcomeMessage");
+		alert(v);
+	</script>
+	<div id="body" style="background: green; font-size: 20px;">
+		
+		<header>
+			<h1 class="wellcomeMessage">Jaro Naro</h1>
+		</header>
+		<button onclick="changeBackground()">Change Bg</button>
+		<br><nav id="navmenu">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="done.html">Head</a></li>
+				<li><a href="next.html">Foot</a></li>
+			</ul>
+		</nav>
 	</div>
-	
+	<div id="main">
+		<p id="p1">Okay it must work.</p>
+		<p id="p2"><a href="index.html">This is Javascript test</a> </p>
+
+	</div>
+	<script type="text/javascript" src="javascript/script.js">
+		
+	</script>
 </body>
 </html>
